Fixed header a bit so it stays and is the right size, need to fix it covering content.

--- a/styles.scss
+++ b/styles.scss
@@ -4,7 +4,7 @@
 
 #welcome-section {
   height: 100vw;
-  width: 100vw;
+  width: 100%;
 }
 
 #profile-pic {
@@ -62,6 +62,18 @@
     "project3 project4";
 }
 
+@media (max-width: 700px) {
+  .grid-projects {
+    grid-template-areas:
+      "title"
+      "project1"
+      "project2"
+      "project3"
+      "project4";
+    gap: 3%;
+  }
+}
+
 .projects__title {
   grid-area: title;
 }
@@ -80,18 +92,6 @@
 
 .projects__survey {
   grid-area: project4;
-}
-
-@media (max-width: 700px) {
-  .grid-projects {
-    grid-template-areas:
-      "title"
-      "project1"
-      "project2"
-      "project3"
-      "project4";
-    gap: 3%;
-  }
 }
 
 .hover:hover {
@@ -118,9 +118,33 @@
 }
 
 .project {
-  background: var(--main-gray);
+  background: gray;
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
   border-radius: 2px;
+}
+
+.nav {
+  display: flex;
+  justify-content: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: #ff4838;
+  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
+  z-index: 10;
+  border-bottom: 3px solid white;
+}
+
+.nav-list {
+  display: flex;
+  margin-right: 2rem;
+}
+
+.nav-list a {
+  display: block;
+font-size: 2.2rem;
+padding: .9rem;
 }
 
 .project-tile {
@@ -135,10 +159,14 @@
   }
 }
 
-.project-tile {
-  height: calc(100% - 6.8rem);
-  width: 100%;
-  object-fit: cover;
+ul {
+  list-style: none;
+  
+}
+
+li {
+  display: flex;
+  justify-content: space-around;
 }
 
 svg {
@@ -160,7 +188,7 @@ img {
   align-items: center;
 }
 
-header {
+/* header {
   position: fixed;
   top: 0;
   left: 0;
@@ -172,7 +200,7 @@ header {
   background-color: #ff4838;
   margin-bottom: 10%;
   border-bottom: 4px solid white;
-}
+} */
 
 footer {
   font-family: "Oswald", Georgia, "Times New Roman", Times, serif;
